manifests/n2app-backend/kubernetes/base/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n2app
  namespace: n2app-backend
  labels:
    app: n2app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n2app
  template:
    metadata:
      labels:
        app: n2app
    spec:
      containers:
        - name: primary
          image: arigatopix/n2app-backend:latest
          imagePullPolicy: Always
          ports:
            - name: api-port
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 200Mi
            requests:
              memory: 100Mi
---
kind: Service
apiVersion: v1
metadata:
  name: n2app
  namespace: n2app-backend
spec:
  selector:
    app: n2app-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
