manifests/n2app-backend/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
  name: n2app
  namespace: n2app-backend
spec:
  ingressClassName: nginx
  rules:
    - host: n2app-api.pea.co.th
      http:
        paths:
          - backend:
              service:
                name: n2app
                port:
                  number: 80
            path: /
            pathType: Prefix
